rename: 복수 디렉터리에 s 프리픽스 추가
